--- a/index.html
+++ b/index.html
@@ -25,26 +25,28 @@
     </style>
   </head>
   <body>
-    <div class="body-container p-4 lg:container" style="margin: 0 auto;">
+    <main class="body-container p-4 max-w-screen-lg transition-opacity ease-in z-0" style="margin: 0 auto;">
+      <div class="shadow-overlay fixed z-10 hidden top-0 left-0 w-full h-full bg-black bg-opacity-50"></div>
       <div class="nav-container flex justify-between content-center pb-6 pt-2">
         <a href="/"><img src="./assets/images/logo.svg" alt="W logo" class="w-11 cursor-pointer"></a>
-        <nav>
-          <img class="inline-block md:hidden" src="./assets/images/icon-menu.svg" alt="">
+        <nav role="navigation">
+          <img class="inline-block md:hidden cursor-pointer" id="hamburger-menu" src="./assets/images/icon-menu.svg" alt="">
           <div class="nav-wrapper hidden md:flex gap-6">
-            <div>Home</div>
-            <div>New</div>
-            <div>Popular</div>
-            <div>Trending</div>
-            <div>Categories</div>
+            <div class="hover:text-red-500 cursor-pointer">Home</div>
+            <div class="hover:text-red-500 cursor-pointer">New</div>
+            <div class="hover:text-red-500 cursor-pointer">Popular</div>
+            <div class="hover:text-red-500 cursor-pointer">Trending</div>
+            <div class="hover:text-red-500 cursor-pointer">Categories</div>
           </div>
         </nav>
-        <aside class="sidebar hidden">
-          <nav>
-            <div>Home</div>
-            <div>New</div>
-            <div>Popular</div>
-            <div>Trending</div>
-            <div>Categories</div>
+        <aside id="sidebar" class="sidebar fixed bg-white top-0 right-0 h-full z-20 transition-transform ease-in translate-x-full" style="width: 65vw;">
+          <img src="./assets/images/icon-menu-close.svg" id="close-menu" class="cursor-pointer absolute right-0 top-0 p-5" alt="">
+          <nav class="flex flex-col gap-5 p-5 mt-20" role="navigation">
+            <div class="hover:text-red-500 cursor-pointer text-xl">Home</div>
+            <div class="hover:text-red-500 cursor-pointer text-xl">New</div>
+            <div class="hover:text-red-500 cursor-pointer text-xl">Popular</div>
+            <div class="hover:text-red-500 cursor-pointer text-xl">Trending</div>
+            <div class="hover:text-red-500 cursor-pointer text-xl">Categories</div>
           </nav>
         </aside>
       </div>
@@ -56,35 +58,34 @@
             <img class="pb-5" src="./assets/images/image-web-3-desktop.jpg" alt="">
           </picture>
         </div>
-        <div class="grid grid-cols-subgrid grid-rows-subgrid grid-item col-start-1 col-end-3 row-start-2 row-end-3">
+        <div class="md:grid grid-cols-subgrid grid-rows-subgrid grid-item col-start-1 col-end-3 row-start-2 row-end-3">
           <h1 class="h1 text-5xl font-extrabold pb-5 col-start-1 col-end-2">The Bright Future of Web 3.0?</h1>
           <div class="col-start-2 col-end-3">
             <p class="text-lg leading-7 pb-6 text-gray-400 font-light" style="color:#5E607A">We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
             <button class="button uppercase bg-red-500 hover:bg-black text-white py-3 px-9 tracking-widest cursor-pointer" style="color:#FFFDFA">Read More</button>
           </div>
         </div>
-        <aside class="grid-item text-white md:m-0 my-14 col-start-3 col-span-4 row-start-1 row-end-3" style="background-color: #00001A;">
+        <aside class="grid-item text-white md:m-0 my-14 col-start-3 col-end-5 row-start-1 row-end-3" style="background-color: #00001A;">
           <div class="grid-item-wrapper px-5 py-6">
             <h2 class="h2 text-3xl font-bold text-yellow-500">New</h2>
             <div class="py-7">
-              <span class="font-extrabold text-xl pb-2 block">Hydrogen VS Electric Cars</span>
+              <span class="font-extrabold text-xl pb-2 block hover:text-yellow-500 cursor-pointer">Hydrogen VS Electric Cars</span>
               <p style="color: #C5C6CE;" class="font-normal text-base leading-6">Will hydrogen-fueled cars ever catch up to EVs?</p>
             </div>
             <hr style="border-color: #5E607A;">
             <div class="py-7">
-              <span class="font-extrabold text-xl pb-2 block">The Downsides of AI Artistry</span>
+              <span class="font-extrabold text-xl pb-2 block hover:text-yellow-500 cursor-pointer">The Downsides of AI Artistry</span>
               <p style="color: #C5C6CE;" class="font-normal text-base leading-6">What are the possible adverse effects of on-demand AI image generation?</p>
             </div>
             <hr style="border-color: #5E607A;">
             <div class="py-7">
-              <span class="font-extrabold text-xl pb-2 block">Is VC Funding Drying Up?</span>
+              <span class="font-extrabold text-xl pb-2 block hover:text-yellow-500 cursor-pointer">Is VC Funding Drying Up?</span>
               <p style="color: #C5C6CE;" class="font-normal text-base leading-6">Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
             </div>
           </div>
         </aside>
-        <div class="grid-item col-span-3 row-start-3 row-end-4">
-          <div class="flex flex-col md:flex-row gap-7 md:gap-0">
-            <div class="flex gap-5">
+        <div class="grid-item col-start-1 col-end-5 row-start-3 row-end-4 flex flex-col md:grid grid-cols-subgrid gap-7 md:gap-7 content-center align-middle">
+            <div class="flex gap-5 col-start-1 col-end-2">
               <img class="w-28 cursor-pointer" src="./assets/images/image-retro-pcs.jpg" alt="">
               <div class="group">
                 <span class="block font-bold text-3xl" style="color: #C5C6CE;">01</span>
@@ -92,7 +93,7 @@
                 <p class="text-base font-normal" style="color: #5E607A;">What happens when old PCs are given modern upgrades?</p>
               </div>
             </div>
-            <div class="flex gap-5">
+            <div class="flex gap-5 col-start-2 col-end-3">
               <img class="w-28 cursor-pointer" src="./assets/images/image-top-laptops.jpg" alt="">
               <div class="group">
                 <span class="block font-bold text-3xl " style="color: #C5C6CE;">02</span>
@@ -100,7 +101,7 @@
                 <p class="text-base font-normal" style="color: #5E607A;">Our best picks for various needs and budgets.</p>
               </div>
             </div>
-            <div class="flex gap-5">
+            <div class="flex gap-5 col-start-3 col-end-4">
               <img class="w-28 cursor-pointer" src="./assets/images/image-gaming-growth.jpg" alt="">
               <div class="group">
                 <span class="block font-bold text-3xl" style="color: #C5C6CE;">03</span>
@@ -108,15 +109,14 @@
                 <p class="text-base font-normal" style="color: #5E607A;"> How the pandemic has sparked fresh opportunities.</p>
               </div>
             </div>
-          </div>
         </div>
       </div>
-    </div>
-    <div class="attribution">
+    </main>
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Fabricio Santana</a>.
-    </div>
+      >. Coded by <a href="https://www.frontendmentor.io/profile/fabsantana" target="_blank">Fabricio Santana</a>.
+    </footer>
   </body>
 </html>
